/* StateSyncMessage.proto: describes the state sync protocol packets & PhoneHome
 *
 * Author: J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Los Alamos National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

/* StateSyncMessage are messages sent by StateSync */
message StateSyncMessage {
    bytes id = 1;
    bytes hmac = 2;
    bytes message = 3;
}

message PhoneHomeRequest {
    bytes id = 1;
}

message PhoneHomeReply {
    bytes pid = 1;
    bytes key = 2;
    StateSyncMessage cfg = 3;
    StateSyncMessage dsc = 4;
}

service StateSync {
    rpc RPCPhoneHome (PhoneHomeRequest) returns (PhoneHomeReply) {}
}